# lab-01-parser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: parser_printer.hpp  student.h
sources/: main.cpp  parser_printer.cpp
tests/: test.cpp
